Check project files with W3C Markup/CSS validation services. Correct resulting errors

--- a/fonts.html
+++ b/fonts.html
@@ -90,12 +90,12 @@
       	</div>
   		</nav>
 		</header>
-    <main role="main">
+    <main>
       <article>
         <header>
           <h2>Fonts</h2>
           <div class="byline-wrapper">
-            <img src="images/avatar.png" alt="avatar" width="40px">
+            <img src="images/avatar.png" alt="avatar" width="40">
             <p>
               <a href="mailto:pictureelement@yandex.com">PictureElement</a>
               <br>
@@ -128,13 +128,11 @@
             are fallback fonts. If the browser can't find the ideal font, it 
             will try to load the second font in the list and so on. 
           </p>
-          <p>
-            <b>Notes:</b> 
-            <ul>
-              <li>Use quotes("") if fonts are multi-word.</li>
-              <li>Not all browsers and OS have all fonts installed by default.</li>
-            </ul>
-          </p>
+          <p><b>Notes:</b></p> 
+          <ul>
+            <li>Use quotes("") if fonts are multi-word.</li>
+            <li>Not all browsers and OS have all fonts installed by default.</li>
+          </ul>
           <p>
             After applying a main font to the <i>element</i>, the browser still 
             uses default font styles. Just like we do with padding, borders, and 
@@ -167,13 +165,11 @@
               }
             </p>
           </div>
-          <p>
-            where <i>value</i> equals:
-            <ul>
-              <li><b>normal</b> - text is shown normally</li>
-              <li><b>italic</b> - text is shown in italics</li>
-            </ul>
-          </p>
+          <p>where <i>value</i> equals:</p>
+          <ul>
+          	<li><b>normal</b> - text is shown normally</li>
+            <li><b>italic</b> - text is shown in italics</li>
+          </ul>
         </section>
         <section>
           <h3>font-weight property</h3>
@@ -188,16 +184,14 @@
               }
             </p>
           </div>
-          <p>
-            where <i>value</i> equals:
-            <ul>
-              <li><b>normal</b> - standard weight(i.e. 400)</li>
-              <li><b>bold</b> - bold weight(i.e. 700)</li>
-              <li><b>bolder</b> - bolder than the inherited font weight</li>
-              <li><b>lighter</b> - lighter than the inherited font weight</li>
-              <li><b>100(lightest)-900(boldest)</b> - in multiples of 100</li>        
-            </ul>
-          </p>
+          <p>where <i>value</i> equals:</p>
+          <ul>
+            <li><b>normal</b> - standard weight(i.e. 400)</li>
+            <li><b>bold</b> - bold weight(i.e. 700)</li>
+            <li><b>bolder</b> - bolder than the inherited font weight</li>
+            <li><b>lighter</b> - lighter than the inherited font weight</li>
+            <li><b>100(lightest)-900(boldest)</b> - in multiples of 100</li>        
+          </ul>
         </section>
         <section>
           <h3>font-size property</h3>
@@ -212,39 +206,37 @@
               }
             </p>
           </div>
-          <p>
-          	where:
-          	<ul>
-          		<li>
-          			<i>keyword</i> equals:
-		          	<ul>
-		          		<li><b>medium</b> - medium font size(default).</li>
-		          		<li><b>xx-small</b> - xx-small font size.</li>
-		          		<li><b>x-small</b> - x-small font size.</li>
-		          		<li><b>small</b> - small font size.</li>
-		          		<li><b>large</b> - large font size.</li>
-		          		<li><b>x-large</b> - x-large font size.</li>
-		          		<li><b>xx-large</b> - xx-large font size.</li>
-		          		<li><b>smaller</b> - smaller size than the parent element.</li> 
-		          		<li><b>larger</b> - larger size than the parent element.</li> 
-									<li><b>inherit</b> - inherit font size from parent element.</li> 
-								</ul>
-							</li>
-       				<li>
-          			<i>length</i> equals:
-		          	<ul>
-		          		<li><b><i>x</i>px</b></li>
-		          		<li><b><i>x</i>mm</b></li>
-		          		<li><b><i>x</i>em</b></li>
-		          		<li><b><i>x</i>ex</b></li>
-		          	</ul>
-          		</li>
-          		<li>
-      					<i>percentage</i> equals to <b><i>x</i>%</b> and refers to the 
-      					parent element's font size.
-          		</li>
-          	</ul>
-          </p>
+          <p>where:</p>
+         	<ul>
+          	<li>
+          		<i>keyword</i> equals:
+		          <ul>
+		          	<li><b>medium</b> - medium font size(default).</li>
+		          	<li><b>xx-small</b> - xx-small font size.</li>
+		          	<li><b>x-small</b> - x-small font size.</li>
+		          	<li><b>small</b> - small font size.</li>
+		          	<li><b>large</b> - large font size.</li>
+		          	<li><b>x-large</b> - x-large font size.</li>
+		          	<li><b>xx-large</b> - xx-large font size.</li>
+		          	<li><b>smaller</b> - smaller size than the parent element.</li> 
+		          	<li><b>larger</b> - larger size than the parent element.</li> 
+								<li><b>inherit</b> - inherit font size from parent element.</li> 
+							</ul>
+						</li>
+       			<li>
+          		<i>length</i> equals:
+		          <ul>
+		          	<li><b><i>x</i>px</b></li>
+		          	<li><b><i>x</i>mm</b></li>
+		          	<li><b><i>x</i>em</b></li>
+		          	<li><b><i>x</i>ex</b></li>
+		          </ul>
+          	</li>
+          	<li>
+      				<i>percentage</i> equals to <b><i>x</i>%</b> and refers to the 
+      				parent element's font size.
+          	</li>
+          </ul>
 				</section>
         <section>
           <h3>text-transform property</h3>
@@ -262,16 +254,14 @@
               }
             </p>
           </div>
-          <p>
-            where <i>value</i> equals:
-            <ul>
-              <li><b>none</b> - no capitalization, text renders as it is(default).</li>
-              <li><b>capitalize</b> - transform the first character of each word to uppercase.</li>
-              <li><b>uppercase</b> - transform all characters to uppercase.</li>
-              <li><b>lowercase</b> - transform all characters to lowercase.</li>
-              <li><b>inherit</b> - inherits this property from its parent element.</li>    
-            </ul>
-          </p>
+          <p>where <i>value</i> equals:</p>
+          <ul>
+          	<li><b>none</b> - no capitalization, text renders as it is(default).</li>
+            <li><b>capitalize</b> - transform the first character of each word to uppercase.</li>
+            <li><b>uppercase</b> - transform all characters to uppercase.</li>
+            <li><b>lowercase</b> - transform all characters to lowercase.</li>
+            <li><b>inherit</b> - inherits this property from its parent element.</li>    
+         	</ul>s
         </section>
         <section>
           <h3>line-height property</h3>
@@ -286,19 +276,17 @@
               }
             </p>
           </div>
-          <p>
-            where <i>value</i> equals:
-            <ul>
-              <li><b>normal</b> - normal line height(default).</li>
-              <li>
-                <b><i>number</i></b> - a number that will be multiplied with the
-                current font size to set the line height.
-              </li>
-              <li>
-                <b><i>length</i></b> - a fixed line height in px, em, etc.
-              </li>
-            </ul>
-          </p>
+          <p>where <i>value</i> equals:</p>
+          <ul>
+          	<li><b>normal</b> - normal line height(default).</li>
+           	<li>
+            	<b><i>number</i></b> - a number that will be multiplied with the
+            	current font size to set the line height.
+            </li>
+            <li>
+            	<b><i>length</i></b> - a fixed line height in px, em, etc.
+           	</li>
+         	</ul>
           <p>
             <b>Note:</b> The <i>number</i> value is the preferred way to set 
             <i>line-height</i> instead of <i>length</i>. There are no unexpected 
@@ -515,36 +503,35 @@
           	<p>This is a Monospaced font.</p>
           </div>
           <h4>Safe fonts</h4>
-          <p>
-          	The fonts that are most safe to use are:
-          	<ul>
-							<li>Serif: Times New Roman (Windows) / Times (Mac, Unix)</li>
-							<li>Sans Serif: Arial (Windows) / Helvetica (Mac, Unix)</li>
-							<li>Monospaced: Courier New (Windows, Mac) / Courier (Mac, Unix)</li>
-						</ul>
-					</p>
+          <p>The fonts that are most safe to use are:</p>
+          <ul>
+						<li>Serif: Times New Roman (Windows) / Times (Mac, Unix)</li>
+						<li>Sans Serif: Arial (Windows) / Helvetica (Mac, Unix)</li>
+						<li>Monospaced: Courier New (Windows, Mac) / Courier (Mac, Unix)</li>
+					</ul>
         </section>
       </article>
     </main>
     <footer>
       <a href="">
-        <img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
+        <img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
+        <img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
+        <img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
+        <img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
+        <img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
       </a>
       <address>
-        &copy 2017 <a href="pictureelement@yandex.com">PictureElement</a>
+        &copy; 2017 <a href="pictureelement@yandex.com">PictureElement</a>
       </address>
+      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
     </footer>
   </body>
 </html>
