--- a/new-form-elements.html
+++ b/new-form-elements.html
@@ -90,12 +90,12 @@
       	</div>
   		</nav>
 		</header>
-		<main role="main">
+		<main>
 			<article>
 				<header>
 					<h2>New Form Elements</h2>
 					<div class="byline-wrapper">
-						<img src="images/avatar.png" alt="avatar" width="40px">
+						<img src="images/avatar.png" alt="avatar" width="40">
 						<p>
 							<a href="mailto:pictureelement@yandex.com">PictureElement</a>
 							<br>
@@ -117,8 +117,8 @@
 						<p>
 							&lt;form&gt;<br>
 							&nbsp;&nbsp;Choose an OS:<br>
-							&nbsp;&nbsp;&lt;input list="operating systems"&gt;<br>
-							&nbsp;&nbsp;&lt;datalist id="operating systems"&gt;<br>
+							&nbsp;&nbsp;&lt;input list="operating-systems"&gt;<br>
+							&nbsp;&nbsp;&lt;datalist id="operating-systems"&gt;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Windows"&gt;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="macOS"&gt;<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value="Linux"&gt;<br>
@@ -137,8 +137,8 @@
 					<div class="result-wrapper">
 						<form>
 							Choose an OS:
-							<input list="operating systems">
-							<datalist id="operating systems">
+							<input list="operating-systems">
+							<datalist id="operating-systems">
 								<option value="Windows"></option>
 								<option value="macOS"></option>
 								<option value="Linux"></option>
@@ -168,23 +168,24 @@
 		</main>
 		<footer>
 			<a href="">
-				<img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
+				<img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
+				<img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
+				<img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
+				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
+				<img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
 			</a>
   		<address>
-    		&copy 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
+    		&copy; 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
   		</address>
+  		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
 		</footer>
 	</body>
 </html>
