--- a/box-model.html
+++ b/box-model.html
@@ -90,12 +90,12 @@
       	</div>
   		</nav>
 		</header>
-    <main role="main">
+    <main>
       <article>
         <header>
           <h2>The Box Model</h2>
           <div class="byline-wrapper">
-            <img src="images/avatar.png" alt="avatar" width="40px">
+            <img src="images/avatar.png" alt="avatar" width="40">
             <p>
               <a href="mailto:pictureelement@yandex.com">PictureElement</a>
               <br>
@@ -133,7 +133,7 @@
               border. The margin is transparent.
             </li>
           </ol>
-          <img src="images/box.png" alt="Box model" width="600px">
+          <img src="images/box.png" alt="Box model" width="600">
           <h4>When should you use padding and margin?</h4>
           <p>
             Padding is used to control the size of a box without adjusting the 
@@ -314,23 +314,24 @@
     </main>
     <footer>
       <a href="">
-        <img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
+        <img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
+        <img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
+        <img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
+        <img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
       </a>
       <a href="">
-        <img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
+        <img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
       </a>
       <address>
-        &copy 2017 <a href="pictureelement@yandex.com">PictureElement</a>
+        &copy; 2017 <a href="pictureelement@yandex.com">PictureElement</a>
       </address>
+      <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
     </footer>
   </body>
 </html>
