--- a/new-input-types.html
+++ b/new-input-types.html
@@ -90,12 +90,12 @@
       	</div>
   		</nav>
 		</header>
-		<main role="main">
+		<main>
 			<article>
 				<header>
 					<h2>New Input Types</h2>
 					<div class="byline-wrapper">
-						<img src="images/avatar.png" alt="avatar" width="40px">
+						<img src="images/avatar.png" alt="avatar" width="40">
 						<p>
 							<a href="mailto:pictureelement@yandex.com">PictureElement</a>
 							<br>
@@ -103,16 +103,6 @@
 						</p>
 					</div>
 				</header>
-				<section>
-					<p>
-						<i class="notice">Notice 1:</i> If a browser doesn't support a 
-						particular input type, it defaults to "text".
-					</p>
-					<p>
-						<i class="notice">Notice 2:</i> The &lt;form&gt; tag is used to create 
-						an HTML form for user input.
-					</p>
-				</section>
 				<section>
 					<h3>Search</h3>
 					<h4>Description</h4>
@@ -375,8 +365,8 @@
 					<h3>Datetime</h3>
 					<h4>Description</h4>
 					<p>
-						The &lt;input type="datetime"&gt; specifies a date and time input field, 
-						with time zone. A date picker can show up in the input field.
+						The &lt;input type="datetime"&gt; specifies a date and time input 
+						field, with time zone. A date picker can show up in the input field.
 					</p> 
 					<h4>Example</h4>
 					<h5>HTML5</h5>
@@ -450,27 +440,36 @@
 						</form>
 					</div>
 				</section>
+				<p>
+					<i class="notice">Notice 1:</i> If a browser doesn't support a 
+					particular input type, it defaults to "text".
+				</p>
+				<p>
+					<i class="notice">Notice 2:</i> The &lt;form&gt; tag is used to create 
+					an HTML form for user input.
+				</p>
 			</article>
 		</main>
 		<footer>
 			<a href="">
-				<img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
+				<img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
+				<img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
+				<img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
+				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
+				<img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
 			</a>
   		<address>
-    		&copy 2017 <a href="mailto:pictureelement@yandex.com" >PictureElement</a>
+    		&copy; 2017 <a href="mailto:pictureelement@yandex.com" >PictureElement</a>
   		</address>
+  		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
 		</footer>
 	</body>
 </html>
