--- a/updated-tags.html
+++ b/updated-tags.html
@@ -90,12 +90,12 @@
       	</div>
   		</nav>
 		</header>
-		<main role="main">
+		<main>
 			<article>
 				<header>
 					<h2>Updated Tags</h2>
 					<div class="byline-wrapper">
-						<img src="images/avatar.png" alt="avatar" width="40px">
+						<img src="images/avatar.png" alt="avatar" width="40">
 						<p>
 							<a href="mailto:pictureelement@yandex.com">PictureElement</a>
 							<br>
@@ -186,23 +186,24 @@
 		</main>
 		<footer>
 			<a href="">
-				<img src="images/googleplus-logo.png" alt="google plus logo" width="30px" class="social-icon">
+				<img src="images/googleplus-logo.png" alt="google plus logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/fb-logo.png" alt="facebook logo" width="30px" class="social-icon">
+				<img src="images/fb-logo.png" alt="facebook logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/instagram-logo.png" alt="instagram logo" width="30px" class="social-icon">
+				<img src="images/instagram-logo.png" alt="instagram logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30px" class="social-icon">
+				<img src="images/linkedin-logo.png" alt="linkedin logo" width="30" class="social-icon">
 			</a>
 			<a href="">
-				<img src="images/twitter-logo.png" alt="twitter logo" width="30px" class="social-icon">
+				<img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
 			</a>
   		<address>
-    		&copy 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
+    		&copy; 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
   		</address>
+  		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
 		</footer>
 	</body>
 </html>
