--- a/new-input-attributes.html
+++ b/new-input-attributes.html
@@ -38,7 +38,7 @@
       		<div class="dropdown-content">
       			<a href="elements.html">Elements</a>
       			<a href="images.html">Images</a>
-      			<a href="">3</a>
+      			<a href="html-common-mistakes.html">Common Mistakes</a>
       			<a href="">4</a>
       			<a href="">5</a>
       			<a href="">6</a>
