--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@
 				<img src="images/twitter-logo.png" alt="twitter logo" width="30" class="social-icon">
 			</a>
   		<address>
-    		&copy; 2017 <a href="mailto:pictureelement@yandex.com">PictureElement</a>
+    		&copy; 2017 <a href="">Marios Sofokleous</a>
   		</address>
   		<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"> 
 		</footer>
